--- a/frontend/src/pages/ProductsPage.css
+++ b/frontend/src/pages/ProductsPage.css
@@ -203,11 +203,11 @@
 .product-placeholder-image {
   width: 100%;
   height: 100%;
-  background-color: #f0f0f0;
+  background-color: #333;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #aaa;
+  color: #ccc;
 }
 .product-card .category-name {
   color: #888;
@@ -227,7 +227,7 @@
 .product-card .product-price {
   font-size: 1.3em;
   font-weight: bold;
-  color: #333;
+  color: #C2883A;
   margin-bottom: 20px;
 }
 .product-card-actions {
